# django_skeleton

./: .gitignore  README.md  cookiecutter.json  docker-compose-dev.yml.example  docker-compose.yml  pyproject.toml
compose/django/: Dockerfile  docker-entrypoint.sh
compose/django/commands/: celery_main.sh  web.sh
compose/django/requirements/: deploy.txt  poetry.txt
hooks/: post_gen_project.py
src/: manage.py
src/api/: tasks.py
src/api/urls/: _documented_api.py  docs.py  documented.py
src/api/yasg/: generators.py  parameters.py  schemas.py
src/cookiecutter_project_name/: asgi.py  celery.py  urls.py  wsgi.py
src/cookiecutter_project_name/migrations/: 0001_initial.py
src/cookiecutter_project_name/settings/: celery.py  common.py  local.py.example
src/project/: urls.py
src/project/migrations/: 0001_initial.py
src/project/settings/: __init__.py  appversion.py  local.py.example  restframework.py  sentry.py
{{ cookiecutter.project_name }}/: .gitignore  README.md  docker-compose-dev.yml.example  docker-compose.yml  pyproject.toml
{{ cookiecutter.project_name }}/compose/django/: docker-entrypoint.sh
{{ cookiecutter.project_name }}/compose/django/commands/: celery_main.sh  web.sh
{{ cookiecutter.project_name }}/compose/nginx/: Dockerfile
{{ cookiecutter.project_name }}/src/api/: tasks.py  tests.py
{{ cookiecutter.project_name }}/src/api/urls/: __init__.py  auth_urls.py
{{ cookiecutter.project_name }}/src/project/: asgi.py  wsgi.py
{{ cookiecutter.project_name }}/src/{{ cookiecutter.project_name }}/: celery.py
(+11 files in other folders)
